--- a/metadata.yaml
+++ b/metadata.yaml
@@ -38,5 +38,6 @@ subjects:
 - !lcc 'PT'
 - !lcsh 'German drama -- 19th century'
 - !lcsh 'Tragedies'
+- GITenberg
 title: 'Almansor: Eine Tragödie'
 url: http://www.gutenberg.org/ebooks/45600
